force-app/main/default/objects/Gift_Certificate__c/Gift_Certificate__c.object-meta.xml
<CustomObject>
    <description>Represents a prepaid credit or voucher that customers can purchase or redeem at storefronts. This object tracks details such as the certificate&apos;s value, recipient, expiration date, and redemption history, ensuring seamless transactions and accurate accounting.</description>
    <label>Gift Certificate</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>