force-app/main/default/objects/Gift_Certificate__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The merchant business account this gift certificate is valid for.</description>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Certificates</relationshipLabel>
    <relationshipName>Business_Account_Gift_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>