force-app/main/default/objects/Gift_Certificate__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Marketing campaign associated with this gift certificate (for promotional issuance).</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Gift Certificates</relationshipLabel>
    <relationshipName>Campaign_Gift_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>