force-app/main/default/objects/Gift_Certificate__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The date after which the gift certificate can no longer be redeemed.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>