force-app/main/default/objects/Gift_Certificate__c/fields/External_Code__c.field-meta.xml
<CustomField>
    <fullName>External_Code__c</fullName>
    <description>Human-readable code printed/encoded on the gift certificate (e.g., for barcode or QR scan).</description>
    <externalId>true</externalId>
    <label>External Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>