force-app/main/default/objects/Gift_Certificate__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User or agent who issued the gift certificate.</description>
    <label>Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Gift Certificates Issued</relationshipLabel>
    <relationshipName>Issued_By_Gift_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>