force-app/main/default/objects/Gift_Certificate__c/fields/Issued_For_Case__c.field-meta.xml
<CustomField>
    <fullName>Issued_For_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this gift certificate to the service Case it was issued for (e.g., recovery).</description>
    <label>Issued For Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Gift Certificates</relationshipLabel>
    <relationshipName>Case_Gift_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>