force-app/main/default/objects/Gift_Certificate__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <description>The original monetary value of the gift certificate at time of issue.</description>
    <label>Original Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>