force-app/main/default/objects/Gift_Certificate__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the person receiving the gift certificate.</description>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Certificates</relationshipLabel>
    <relationshipName>Gift_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>