force-app/main/default/objects/Gift_Certificate__c/fields/Remaining_Value__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Value__c</fullName>
    <description>The remaining monetary value available for redemption.</description>
    <label>Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>