force-app/main/default/objects/Gift_Certificate__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <description>Channel through which the gift certificate was created.</description>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
                <default>true</default>
                <label>Web</label>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>Merchant Portal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>