force-app/main/default/objects/Gift_Certificate__c/fields/Storefront__c.field-meta.xml
<CustomField>
    <fullName>Storefront__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific storefront where this gift certificate can be redeemed.</description>
    <label>Storefront</label>
    <referenceTo>Storefront__c</referenceTo>
    <relationshipLabel>Gift Certificates</relationshipLabel>
    <relationshipName>Storefront_Gift_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>