force-app/main/default/objects/Gift_Certificate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Classifies how this gift certificate was created (purchased, recovery, promotion, etc.).</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchased</fullName>
                <default>true</default>
                <label>Purchased</label>
            </value>
            <value>
                <fullName>Recovery</fullName>
                <label>Recovery / Service Recovery</label>
            </value>
            <value>
                <fullName>Promotion</fullName>
                <label>Promotion / Marketing</label>
            </value>
            <value>
                <fullName>Loyalty Reward</fullName>
            </value>
            <value>
                <fullName>Referral Bonus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>