force-app/main/default/objects/Gift_Certificate__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The monetary value of the gift certificate.</description>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>